# UILayout

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md
Docs/: Components.md  GettingStarted.md  Router.md
LatteCLI/: main.cpp
LatteLayout/: CMakeLists.txt
LatteLayout/LatteLayout/: layout.c  layout.h
LatteRuntime/: latteui.cpp  latteui.h  main.cpp
LatteRuntime/Binding/: Component.cpp  Component.h  ComponentEvents.cpp
LatteRuntime/Components/: Component.cpp  Component.h  ComponentEvents.cpp  ComponentEvents.h  ComponentLibrary.cpp  ComponentLibrary.h  Core.cpp  Core.h  Focus.cpp  Focus.h
LatteRuntime/OS/: AssetBundle.cpp  AssetBundle.h  Clipboard.cpp  Clipboard.h  Event.h  EventLoop.cpp  EventLoop.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
LatteRuntime/Rendering/: Color.h  FontMetrics.cpp  FontMetrics.h  NodeRenderer.cpp  NodeRenderer.h
LatteRuntime/Router/: Router.cpp  Router.h
LatteRuntime/Utils/: Log.cpp  Log.h  LuaHelpers.h  Singleton.h
LatteRuntime/glad/: glad.c  glad.h
Misc/: MoonUI.md  UIDescriptor.md
Templates/Basic/: main.lua
Tests/: CounterApp.lua  SimpleButton.lua  SimpleWindow.lua
example/: test.c
example/glad/: glad.c
luaSrc/: latte-base.lua  latte-components.lua  latte-fluentui.lua  latte-material3.lua  latte-textedit.lua
src/: latteLayout.c  latteLayout.h  layout.c  layout.h
